# python-project-50

./: .codeclimate.yml  .coverage  .gitignore  Makefile  README.md  coverage.xml  pyproject.toml  setup.cfg
.github/workflows/: main.yml
gendiff/: cli.py  dicts_diff.py  generate_diff.py  parser.py  reading_data.py
gendiff/formatter/: get_format_name.py  json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_generate_diff.py  test_generate_diff_json.py  test_generate_diff_yaml.py
tests/fixtures/: correct_result_json_format.txt  correct_result_tree_json.txt  file1.json  file1.yaml  file1_tree.json  file1_tree.yaml  file2.json  file2.yaml  file2_tree.json  file2_tree.yaml
